2009-06-04  Roland Steiner <rolandsteiner@google.com>

        Reviewed by Eric Seidel.

        Bug 26202: add macros for primitive values to simplify CSSStyleSelector::applyProperty
        https://bugs.webkit.org/show_bug.cgi?id=26202

        * css/CSSStyleSelector.cpp: add HANDLE_INHERIT_AND_INITIAL_AND_PRIMITIVE[_WITH_VALUE] macros
        (WebCore::CSSStyleSelector::applyProperty): use new macros

2009-06-04  Roland Steiner <rolandsteiner@google.com>

        Reviewed by Eric Seidel

        Bug 26203: Move parsing of 'attr(X)' values to own method
        https://bugs.webkit.org/show_bug.cgi?id=26203

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseAttr): new method
        (WebCore::CSSParser::parseContent): use new parseAttr method
        * css/CSSParser.h:
        (WebCore::CSSParser::parseAttr): new method

2009-06-04  Roland Steiner <rolandsteiner@google.com>

        Reviewed by Eric Seidel.

        Bug 26205: RenderTableSection::addChild : correct comment
        https://bugs.webkit.org/show_bug.cgi?id=26205

        * rendering/RenderTableSection.cpp:
        (WebCore::RenderTableSection::addChild): correct comment

2009-06-04  Roland Steiner <rolandsteiner@google.com>

        Reviewed by Eric Seidel.

        Bug 26204: RenderBlock : simplify handleSpecialChild, comment correction
        https://bugs.webkit.org/show_bug.cgi?id=26204

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::handleSpecialChild): simplify usage
        (WebCore::RenderBlock::handlePositionedChild): simplify usage
        (WebCore::RenderBlock::handleFloatingChild): simplify usage
        (WebCore::RenderBlock::handleRunInChild): simplify usage
        (WebCore::RenderBlock::layoutBlock): correct comment
        (WebCore::RenderBlock::layoutBlockChildren): simplify loop, change call to handleSpecialChild
        * rendering/RenderBlock.h: 
        (WebCore::RenderBlock::handleSpecialChild): change signature