@@ -2,6 +2,17 @@
 
         Reviewed by Eric Seidel.
 
+        Bug 26201: Remove superfluous 'if' statements in RenderTable::addChild
+        https://bugs.webkit.org/show_bug.cgi?id=26201
+
+        * rendering/RenderTable.cpp:
+        (WebCore::RenderTable::addChild): remove superfluous 'if' statements
+       
+
+2009-06-04  Roland Steiner <rolandsteiner@google.com>
+
+        Reviewed by Eric Seidel.
+
         Bug 26202: add macros for primitive values to simplify CSSStyleSelector::applyProperty
         https://bugs.webkit.org/show_bug.cgi?id=26202
 
